--- a/css/style.css
+++ b/css/style.css
@@ -732,10 +732,10 @@ header {
 .right_menu li .wsus__droap_cart {
     position: absolute;
     background: var(--colorWhite);
-    width: 380px;
+    width: 320px;
     top: 120%;
     left: 0px;
-    padding: 25px 30px 30px;
+    padding: 20px 25px 25px 25px;
     text-align: center;
     box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
     opacity: 0;
@@ -818,16 +818,20 @@ header {
 .wsus__droap_cart_list li .text a,
 .wsus__droap_cart_list li .text h6 {
     display: block;
-    font-size: 16px;
+    font-size: 18px;
     font-weight: 600;
     font-family: var(--headingFont);
-    text-transform: uppercase;
+    text-transform: capitalize;
     color: var(--colorBlack);
     transition: all linear .3s;
     -webkit-transition: all linear .3s;
     -moz-transition: all linear .3s;
     -ms-transition: all linear .3s;
     -o-transition: all linear .3s;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
 }
 
 .wsus__droap_cart_list li .text a:hover {
@@ -841,7 +845,7 @@ header {
 
 .wsus__droap_cart_list li span {
     position: absolute;
-    bottom: 6px;
+    bottom: 8px;
     right: 0px;
     font-size: 20px;
     color: var(--colorBlack);
@@ -1599,6 +1603,7 @@ header {
 
 .call_to_action_img {
     position: relative;
+    height: 100%;
 }
 
 .call_to_action_img a {
@@ -2622,7 +2627,7 @@ footer {
 }
 
 .wsus__single_testimonial_2 .comment {
-    margin-top: 12px;
+    margin-top: 20px;
 }
 
 .wsus__single_testimonial_2 .bottom {
