--- a/css/responsive.css
+++ b/css/responsive.css
@@ -424,6 +424,36 @@
         BLOG DETAILS END
     ========================== */
 
+    .wsus__breadcrumb {
+        padding: 200px 0px 100px 0px;
+    }
+
+    .wsus__breadcrumb_text h1 {
+        font-size: 52px;
+    }
+
+    .wsus__career_details_top .thumbnail {
+        height: 490px;
+    }
+
+    .wsus__single_career {
+        padding: 30px;
+    }
+
+    .wsus__billing_product li .text {
+        width: 65%;
+        margin-left: 20px;
+    }
+
+
+
+
+
+
+
+
+
+
 
 
 }
@@ -800,10 +830,21 @@
         BLOG DETAILS END
     ========================== */
 
+    .wsus__career_details_top .thumbnail {
+        height: 415px;
+    }
 
+    .wsus__single_career {
+        padding: 30px;
+    }
 
+    .wsus__single_career h3 {
+        font-size: 22px;
+    }
 
-
+    .wsus__billing_product li .text {
+        width: 71%;
+    }
 
 
 
@@ -1363,6 +1404,7 @@
 
     .wsus__blog_det_text_top {
         margin-top: -25px;
+        padding-left: 0;
     }
 
     .wsus__blog_det_text_top h2 {
@@ -1393,6 +1435,35 @@
     /* ==========================
         BLOG DETAILS END
     ========================== */
+
+    .wsus__career_details_top .thumbnail {
+        height: 310px;
+    }
+
+    .wsus__single_career {
+        padding: 20px;
+    }
+
+    .wsus__single_career h3 {
+        font-size: 22px;
+    }
+
+    .wsus__cart_coupon form input {
+        width: 100%;
+    }
+
+    .wsus__cart_coupon form .common_btn {
+        margin-left: 0;
+        margin-top: 10px;
+    }
+
+    .wsus__billing_product li .text {
+        width: 80%;
+    }
+
+    .wsus__contact_info {
+        margin-bottom: 25px;
+    }
 
 
 
@@ -1970,6 +2041,44 @@
         BLOG DETAILS END
     ========================== */
 
+    .wsus__pagination ul li a {
+        width: 45px;
+        height: 45px;
+        line-height: 45px;
+    }
+
+    .wsus__career_details_top .thumbnail {
+        height: 230px;
+    }
+
+    .wsus__single_career {
+        padding: 25px;
+    }
+
+    .wsus__single_career h3 {
+        font-size: 22px;
+    }
+
+    .wsus__billing_product li .text {
+        width: 75%;
+    }
+
+    .wsus__contact_form h3 {
+        font-size: 32px;
+    }
+
+    .wsus__contact_info {
+        margin-bottom: 25px;
+    }
+
+
+
+
+
+
+
+
+
 
 
 }
@@ -2508,6 +2617,54 @@
         BLOG DETAILS END
     ========================== */
 
+    .wsus__pagination ul li a {
+        width: 40px;
+        height: 40px;
+        line-height: 40px;
+    }
+
+    .wsus__career_details_top .thumbnail {
+        height: auto;
+    }
+
+    .wsus__career_details_text h2 {
+        font-size: 20px;
+    }
+
+    .wsus__single_career {
+        padding: 20px;
+    }
+
+    .wsus__single_career h3 {
+        font-size: 22px;
+    }
+
+    .wsus__cart_coupon form input {
+        width: 100%;
+    }
+
+    .wsus__cart_coupon form .common_btn {
+        margin-left: 0;
+        margin-top: 10px;
+    }
+
+    .wsus__billing_product li .text {
+        width: 56%;
+        margin-left: 20px;
+    }
+
+    .wsus__billing_summary {
+        padding: 15px 20px 35px;
+    }
+
+    .wsus__contact_info {
+        padding: 25px;
+        margin-bottom: 25px;
+    }
+
+    .wsus__contact_form h3 {
+        font-size: 26px;
+    }
 
 
 
